Minor cleanup and spelling fixes